# ModernCppExercises

./: .gitignore  CMakeLists.txt  README.md
Functional/: CMakeLists.txt  Functional.md
Functional/include/: EventManager.h
Functional/src/: EventManager.cpp  main.cpp
Multithreading/: CMakeLists.txt  MultiThreading.md
Multithreading/include/: MultiThreading.h
Multithreading/src/: MultiThreading.cpp  main.cpp
SmartResourceManagement/: CMakeLists.txt  SmartResourceManager.md
SmartResourceManagement/include/: ResourceManager.h
SmartResourceManagement/src/: ResourceManager.cpp  main.cpp
